<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.loren.projecto_final_lbv.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="10"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/close_session"
        android:orderInCategory="20"
        android:title="@string/close_session"
        app:showAsAction="never" />

    <item
        android:id="@+id/copyright"
        android:orderInCategory="30"
        android:title="@string/Copyright"
        app:showAsAction="never" />

    <item
        android:id="@+id/contact"
        android:orderInCategory="40"
        android:title="@string/contact"
        app:showAsAction="never" />
</menu>
